# renshuu-rs

./: .gitignore  Cargo.toml  Makefile  README.md  cliff.toml  rustfmt.toml
src/: cli.rs  config.rs  lib.rs  main.rs
src/api/: client.rs  grammar.rs  kanji.rs  mod.rs  reibun.rs  user.rs  word.rs
src/models/: grammar.rs  kanji.rs  lists.rs  mod.rs  privacy.rs  profile.rs  reibun.rs  terms.rs  word.rs
