[package]
name = "renshuu"
version = "0.1.0"
authors = ["Joshua Ford <joshua.ford@proton.me"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["renshuu", "api", "japanese"]
description = """
A Rust Renshuu v1 API client.
"""

[lib]
name = "renshuu"
path = "src/lib.rs"

[[bin]]
name = "renshuu_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
better-panic = "0.3"
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
dotenv = "0.15"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

